[gd_scene load_steps=10 format=1]

[ext_resource path="res://script/main.gd" type="Script" id=1]
[ext_resource path="res://scene/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/map4.png" type="Texture" id=3]
[ext_resource path="res://art/map3.png" type="Texture" id=4]
[ext_resource path="res://font/liliput_steps_72.fnt" type="BitmapFont" id=5]
[ext_resource path="res://sound/kill.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]

resource/name = "run"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ground:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Rect2( 0, 0, 512, 128 ), Rect2( 1024, 0, 512, 128 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("BG:region_rect")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Rect2( 0, 0, 512, 128 ), Rect2( 512, 0, 512, 128 ) ] }

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 262.307, 76.3155 )

[sub_resource type="Animation" id=3]

resource/name = "flash"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.6 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 0.163922 ), Color( 1, 1, 1, 0.890706 ), Color( 1, 1, 1, 0 ) ] }

[node name="main" type="Node2D"]

transform/pos = Vector2( 0, 6 )
script/script = ExtResource( 1 )
tube_count = 2

[node name="tubes" type="Node2D" parent="."]

transform/pos = Vector2( 0, -49 )

[node name="player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 202, 290 )
mass = 20.0
sleeping = true

[node name="ground" type="Node2D" parent="."]

[node name="BG" type="Sprite" parent="ground"]

transform/pos = Vector2( 0, 544 )
z/z = -4
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -128 )
region = true
region_rect = Rect2( 271.457, 0, 512, 128 )

[node name="ground" type="Sprite" parent="ground"]

transform/pos = Vector2( 0, 542.523 )
texture = ExtResource( 4 )
centered = false
region = true
region_rect = Rect2( 542.914, 0, 512, 128 )

[node name="anim" type="AnimationPlayer" parent="ground"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/run = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "run"

[node name="static" type="Area2D" parent="ground"]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 221.415, 618.315 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="col" type="CollisionShape2D" parent="ground/static"]

transform/pos = Vector2( 221.415, 618.315 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="start_time" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="label" type="Label" parent="."]

anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 116.0
margin/right = -742.0
margin/bottom = 1076.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "\n*/TAP/*"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LOGO" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -200.0
margin/top = -3.0
margin/right = -542.0
margin/bottom = 957.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.898438, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "Flappy\n\t\tGodot"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dead_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="flash" type="Polygon2D" parent="."]

polygon = Vector2Array( 0, -6, 0, 594, 400, 594, 400, -6 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 0 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="anim" type="AnimationPlayer" parent="flash"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 3 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="kill" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="body_enter" from="ground/static" to="." method="kill_ground"]

[connection signal="timeout" from="start_time" to="." method="_on_start_time_timeout"]

[connection signal="timeout" from="dead_timer" to="." method="_on_dead_timer_timeout"]


